@@ -2,7 +2,7 @@
 use strict;
 
 use lib qw(./lib);
-use Test::More tests => 26;
+use Test::More tests => 28;
 
 use CPAN::Testers::WWW::Reports::Query::Reports;
 #use Data::Dumper;
@@ -86,93 +86,120 @@ my @args = (
         count   => 2500,
         error   => ''
     },
+);
 
-    # bad data
-
+# bad data
+my @bad = (
     { 
         date    => '',
         results => undef,
-        error   => ''
+        error   => undef
     },
     { 
         date    => 'blah',
         results => undef,
-        error   => ''
+        error   => undef
     },
     { 
         range   => '',
         results => undef,
-        error   => ''
+        error   => undef
     },
     { 
         range   => 'blah',
         results => undef,
-        error   => ''
+        error   => undef
     },
 );
 
 my $query = CPAN::Testers::WWW::Reports::Query::Reports->new();
 isa_ok($query,'CPAN::Testers::WWW::Reports::Query::Reports');
 
+{
+    for my $args (@bad) {
+        if(defined $args->{date}) {
+            my $data = $query->date( $args->{date} );
+            is($data, undef,".. got no results, as expected for date [$args->{date}]");
+        } elsif(defined $args->{range}) {
+            my $data = $query->range( $args->{range} );
+            is($data, undef,".. got no results, as expected for range [$args->{range}]");
+        }
+        is($query->error,$args->{error},'.. no error reported');
+    }
+}
+
 SKIP: {
-    skip "Network unavailable", 25 if(pingtest());
+    skip "Network unavailable", 21 if(pingtest());
 
     for my $args (@args) {
         if(defined $args->{date}) {
             my $data = $query->date( $args->{date} );
-            is($query->error,$args->{error},'.. no error reported');
-            is($query->raw,$args->{raw},'.. raw query matches') if(defined $args->{raw});
+            my $skip = $args->{results} ? scalar(keys %{$args->{results}}) : 0;
 
-            if($data && $args->{results}) {
-                is($data->{$_},$args->{results}{$_},".. got '$_' in date hash [$args->{date}]") for(keys %{$args->{results}});
-            } elsif($args->{results}) {
-                my $skip = $args->{results} ? scalar(keys %{$args->{results}}) : 0;
-                SKIP: {
-                    skip "No response from request, site may be down", $skip;
+            SKIP: {
+                skip "Request timeout, skipping", $skip + 2
+                    if($query->error && $query->error =~ /read timeout/);
 
-                    #diag($query->error());
-                    if($args->{results}) { ok(1)   for(keys %{$args->{results}}) }
+                is($query->error,$args->{error},'.. no error reported');
+                is($query->raw,$args->{raw},'.. raw query matches') if(defined $args->{raw});
+
+                if($data && $args->{results}) {
+                    is($data->{$_},$args->{results}{$_},".. got '$_' in date hash [$args->{date}]") for(keys %{$args->{results}});
+                } elsif($args->{results}) {
+                    SKIP: {
+                        skip "No response from request, site may be down", $skip;
+
+                        #diag($query->error());
+                        if($args->{results}) { ok(1)   for(keys %{$args->{results}}) }
+                    }
+                } else {
+                    is($data, undef,".. got no results, as expected [$args->{date}]");
                 }
-            } else {
-                is($data, undef,".. got no results, as expected [$args->{date}]");
             }
+
         } elsif(defined $args->{range}) {
             my $data = $query->range( $args->{range} );
-            is($query->error,$args->{error},'.. no error reported');
-            is($query->raw,$args->{raw},'.. raw query matches') if(defined $args->{raw});
+            my $skip = $args->{results} ? scalar(keys %{$args->{results}}) : 0;
+            for(qw(start stop count)) {
+                $skip++ if($args->{$_});
+            }
 
-            if($data) {
-                if($args->{results}) {
-                    #diag(Dumper( $data ));
-                    is_deeply($data->{$_},$args->{results}{$_},".. got '$_' in range hash [$args->{range}]") 
-                        for(keys %{$args->{results}});
-                }
-                my @keys = sort { $a <=> $b } keys %$data;
-                if($args->{start}) {
-                    is($keys[0], $args->{start},".. got start value [$args->{range}]");
-                }
-                if($args->{stop}) {
-                    is($keys[-1], $args->{stop},".. got stop value [$args->{range}]");
-                }
-                if($args->{count}) {
-                    cmp_ok(scalar @keys, '<=', $args->{count},".. counted number of records [$args->{range}]");
-                }
-            } else {
-                my $skip = $args->{results} ? scalar(keys %{$args->{results}}) : 0;
-                for(qw(start stop count)) {
-                    $skip++ if($args->{$_});
-                }
+            SKIP: {
+                skip "Request timeout, skipping", $skip + 2
+                    if($query->error && $query->error =~ /read timeout/);
 
-                SKIP: {
-                    skip "No response from request, site may be down", $skip;
+                is($query->error,$args->{error},'.. no error reported');
+                is($query->raw,$args->{raw},'.. raw query matches') if(defined $args->{raw});
 
-                    #diag($query->error());
-                    if($args->{results}) { ok(1)   for(keys %{$args->{results}}) }
-                    ok(1)   if($args->{start});
-                    ok(1)   if($args->{stop});
-                    ok(1)   if($args->{count});
+                if($data) {
+                    if($args->{results}) {
+                        #diag(Dumper( $data ));
+                        is_deeply($data->{$_},$args->{results}{$_},".. got '$_' in range hash [$args->{range}]") 
+                            for(keys %{$args->{results}});
+                    }
+                    my @keys = sort { $a <=> $b } keys %$data;
+                    if($args->{start}) {
+                        is($keys[0], $args->{start},".. got start value [$args->{range}]");
+                    }
+                    if($args->{stop}) {
+                        is($keys[-1], $args->{stop},".. got stop value [$args->{range}]");
+                    }
+                    if($args->{count}) {
+                        cmp_ok(scalar @keys, '<=', $args->{count},".. counted number of records [$args->{range}]");
+                    }
+                } else {
+                    SKIP: {
+                        skip "No response from request, site may be down", $skip;
+
+                        #diag($query->error());
+                        if($args->{results}) { ok(1)   for(keys %{$args->{results}}) }
+                        ok(1)   if($args->{start});
+                        ok(1)   if($args->{stop});
+                        ok(1)   if($args->{count});
+                    }
                 }
             }
+
         } else {
             ok(0,'missing date or range test');
         }
