@@ -1,6 +1,9 @@
 Revision history for CPAN-Testers-WWW-Reports-Query-Reports
 ===========================================================
 
+        - realignment of bad data tests.
+        - added timeout skips.
+
 0.08	2014-09-28
         - fixed license fields in META.json to be lists.
         - added homepage to META resources.
